# inferno-rs

./: README.md
disvm/: Cargo.toml
disvm/src/: consts.rs  data.rs  lib.rs  mem.rs  module.rs  opcode.rs  program.rs  runt.rs  util.rs  vm.rs  xec.rs
disvm/src/mem/: heap.rs
disvm/tests/: common.rs  integration.rs
src/: main.rs
src/disvm/: consts.rs  mod.rs  module.rs  opcode.rs
