[package]
name = "disvm"
description = "Dis Virtual Machine implementation"

[lib]

[[test]]
name = "tests"
path = "tests/common.rs"

[dependencies]
bytemuck = "1.14.1"
enum-primitive-derive = "^0.1"
num-traits = { version = "^0.1", features = [] }
modular-bitfield = "0.11.2"
presser = "0.3.1"
libc = "^0.2"